# OpenEventBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/event_bot/: __main__.py  bot.py  config.py  database.py
